Updating index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Freelancer - Start Bootstrap Theme</title>
+        <title>Portfolio - Maks Kaczmarek</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Maks Kaczmarek</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -40,7 +40,7 @@
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="..." />
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Start Bootstrap</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Maks Kaczmarek</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+                <p class="masthead-subheading font-weight-light mb-0">Software Developer - Python, Kotlin - Web & Mobile App Developer</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -125,7 +125,7 @@
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">About Me</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -134,14 +134,26 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+                    <div class="col-lg-4 ms-auto">
+                        <p class="lead">Hi, I’m Maks Kaczmarek, an Android developer currently studying Computer Science at Politechnika Łódzka in Łódź. I specialize in Android development using Kotlin and enjoy building efficient, user-friendly applications. My experience also extends to Python, which I use for backend development and automation projects.</p>
+                        <p class="lead">I’m passionate about creating high-quality apps and exploring the latest tools and technologies in mobile development. I also focus on performance optimization and ensuring that my applications provide smooth user experiences.</p>
+                    </div>
+                    <div class="col-lg-4 me-auto">
+                        <p class="lead">I work with Android’s core libraries and third-party tools like Retrofit, Firebase, and Jetpack to build scalable applications. My goal is to keep learning, improving, and building apps that users love. Whether it’s working with APIs or implementing background tasks, I strive to deliver efficient, maintainable code.</p>
+                        <ul>
+                            <li>Proficient in Kotlin, Java, and Python</li>
+                            <li>Expert in Android development (Jetpack, Room, WorkManager, Retrofit)</li>
+                            <li>Experienced in UI/UX design for mobile applications</li>
+                            <li>Version control with Git and GitHub</li>
+                            <li>Agile methodology and CI/CD integration</li>
+                        </ul>
+                    </div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
-                        <i class="fas fa-download me-2"></i>
-                        Free Download!
+                    <a class="btn btn-xl btn-outline-light" href="https://github.com/maksKaczmarek" target="_blank">
+                        <i class="fas fa-code me-2"></i>
+                        Check My Projects!
                     </a>
                 </div>
             </div>
