updating about me section

--- a/index.html
+++ b/index.html
@@ -134,30 +134,52 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto">
-                        <p class="lead">Hi, I’m Maks Kaczmarek, an Android developer currently studying Computer Science at Politechnika Łódzka in Łódź. I specialize in Android development using Kotlin and enjoy building efficient, user-friendly applications. My experience also extends to Python, which I use for backend development and automation projects.</p>
-                        <p class="lead">I’m passionate about creating high-quality apps and exploring the latest tools and technologies in mobile development. I also focus on performance optimization and ensuring that my applications provide smooth user experiences.</p>
-                    </div>
-                    <div class="col-lg-4 me-auto">
-                        <p class="lead">I work with Android’s core libraries and third-party tools like Retrofit, Firebase, and Jetpack to build scalable applications. My goal is to keep learning, improving, and building apps that users love. Whether it’s working with APIs or implementing background tasks, I strive to deliver efficient, maintainable code.</p>
-                        <ul>
-                            <li>Proficient in Kotlin, Java, and Python</li>
-                            <li>Expert in Android development (Jetpack, Room, WorkManager, Retrofit)</li>
-                            <li>Experienced in UI/UX design for mobile applications</li>
+                    <div class="col-lg-8 mx-auto">
+                        <p class="lead text-center">Hi, I’m Maks Kaczmarek, an Android developer currently studying Computer Science at Politechnika Łódzka in Łódź. I specialize in Android app development using Kotlin, focusing on building efficient, scalable, and user-friendly applications. My goal is to create seamless mobile solutions that provide smooth and engaging user experiences.</p>
+                        <p class="lead text-center">In addition to Kotlin, I’m experienced in Python, which I use for backend development, scripting, and automation. Whether it's building web scrapers, automating tasks, or working with APIs, I leverage Python’s versatility to create efficient solutions. I am always looking for opportunities to enhance my skills and explore new technologies.</p>
+
+                        <h3 class="text-center">Key Android Development Skills</h3>
+                        <ul class="text-center">
+                            <li>Advanced Android app development using Kotlin</li>
+                            <li>Building responsive UIs with Jetpack Compose and XML layouts</li>
+                            <li>Working with Android Jetpack libraries: LiveData, ViewModel, Room Database, and Navigation Component</li>
+                            <li>Modern development patterns: MVVM, Clean Architecture, Dependency Injection (Hilt)</li>
+                            <li>API integration using Retrofit, OkHttp, and Firebase</li>
+                            <li>Background tasks: WorkManager, FCM, and Push Notifications</li>
                             <li>Version control with Git and GitHub</li>
-                            <li>Agile methodology and CI/CD integration</li>
+                            <li>Automated testing with Espresso, JUnit, and UI Automator</li>
+                            <li>Performance optimization and memory management</li>
+                            <li>Deployment and CI/CD with GitLab CI and GitHub Actions</li>
+                        </ul>
+
+                        <h3 class="text-center">Python Skills</h3>
+                        <ul class="text-center">
+                            <li>Backend development using Flask and FastAPI for building scalable web applications</li>
+                            <li>Data processing and manipulation with Pandas and NumPy</li>
+                            <li>Web scraping and automation with BeautifulSoup and Selenium</li>
+                            <li>Creating RESTful APIs and integrating with external services</li>
+                            <li>Working with databases (SQLite, PostgreSQL) for data storage and retrieval</li>
+                            <li>Experience with machine learning libraries like TensorFlow and scikit-learn</li>
+                            <li>Automation of repetitive tasks, such as file handling and data extraction</li>
+                        </ul>
+
+                        <h3 class="text-center">Tools & Technologies</h3>
+                        <ul class="text-center">
+                            <li>Android Studio, Kotlin</li>
+                            <li>Firebase (Firestore, Realtime Database, Firebase Auth)</li>
+                            <li>Room Database & SQLite</li>
+                            <li>Jetpack Compose, XML Layouts</li>
+                            <li>API Integration (REST, GraphQL)</li>
+                            <li>Version Control with Git & GitHub</li>
+                            <li>Flask, FastAPI, Pandas, NumPy</li>
+                            <li>Web Scraping (BeautifulSoup, Selenium)</li>
+                            <li>Machine Learning (TensorFlow, scikit-learn)</li>
                         </ul>
                     </div>
                 </div>
-                <!-- About Section Button-->
-                <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://github.com/maksKaczmarek" target="_blank">
-                        <i class="fas fa-code me-2"></i>
-                        Check My Projects!
-                    </a>
-                </div>
             </div>
         </section>
+
         <!-- Contact Section-->
         <section class="page-section" id="contact">
             <div class="container">
