--- a/index.html
+++ b/index.html
@@ -134,51 +134,52 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <p class="lead text-center">Hi, I’m Maks Kaczmarek, an Android developer currently studying Computer Science at Politechnika Łódzka in Łódź. I specialize in Android app development using Kotlin, focusing on building efficient, scalable, and user-friendly applications. My goal is to create seamless mobile solutions that provide smooth and engaging user experiences.</p>
-                        <p class="lead text-center">In addition to Kotlin, I’m experienced in Python, which I use for backend development, scripting, and automation. Whether it's building web scrapers, automating tasks, or working with APIs, I leverage Python’s versatility to create efficient solutions. I am always looking for opportunities to enhance my skills and explore new technologies.</p>
-
-                        <h3 class="text-center">Android Development Skills</h3>
-                        <ul class="text-center">
-                            <li>Advanced Android app development using Kotlin</li>
-                            <li>Building responsive UIs with Jetpack Compose and XML layouts</li>
-                            <li>Working with Android Jetpack libraries: LiveData, ViewModel, Room Database, and Navigation Component</li>
-                            <li>Modern development patterns: MVVM, Clean Architecture, Dependency Injection (Hilt)</li>
-                            <li>API integration using Retrofit, OkHttp, and Firebase</li>
-                            <li>Background tasks: WorkManager, FCM, and Push Notifications</li>
-                            <li>Version control with Git and GitHub</li>
-                            <li>Automated testing with Espresso, JUnit, and UI Automator</li>
-                            <li>Performance optimization and memory management</li>
-                            <li>Deployment and CI/CD with GitLab CI and GitHub Actions</li>
-                        </ul>
-
-                        <h3 class="text-center">Python Skills</h3>
-                        <ul class="text-center">
-                            <li>Backend development using Flask and FastAPI for building scalable web applications</li>
-                            <li>Data processing and manipulation with Pandas and NumPy</li>
-                            <li>Web scraping and automation with BeautifulSoup and Selenium</li>
-                            <li>Creating RESTful APIs and integrating with external services</li>
-                            <li>Working with databases (SQLite, PostgreSQL) for data storage and retrieval</li>
-                            <li>Experience with machine learning libraries like TensorFlow and scikit-learn</li>
-                            <li>Automation of repetitive tasks, such as file handling and data extraction</li>
-                        </ul>
-
-                        <h3 class="text-center">Tools & Technologies</h3>
-                        <ul class="text-center">
-                            <li>Android Studio, Kotlin</li>
-                            <li>Firebase (Firestore, Realtime Database, Firebase Auth)</li>
-                            <li>Room Database & SQLite</li>
-                            <li>Jetpack Compose, XML Layouts</li>
-                            <li>API Integration (REST, GraphQL)</li>
-                            <li>Version Control with Git & GitHub</li>
-                            <li>Flask, FastAPI, Pandas, NumPy</li>
-                            <li>Web Scraping (BeautifulSoup, Selenium)</li>
-                            <li>Machine Learning (TensorFlow, scikit-learn)</li>
-                        </ul>
+                    <div class="col-lg-8 mx-auto text-center">
+                        <p class="lead">Hi, I’m Maks Kaczmarek, an Android developer currently studying Computer Science at Politechnika Łódzka in Łódź. I specialize in Android app development using Kotlin, focusing on building efficient, scalable, and user-friendly applications. My goal is to create seamless mobile solutions that provide smooth and engaging user experiences.</p>
+                        <p class="lead">In addition to Kotlin, I’m experienced in Python, which I use for backend development, scripting, and automation. Whether it's building web scrapers, automating tasks, or working with APIs, I leverage Python’s versatility to create efficient solutions. I am always looking for opportunities to enhance my skills and explore new technologies.</p>
+                    </div>
+                </div>
+                <!-- Skill Cards-->
+                <div class="row text-center mt-4">
+                    <div class="col-md-4 mb-4">
+                        <div class="card skill-card">
+                            <div class="card-header">Android Development Skills</div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Advanced Android app development using Kotlin</li>
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Building responsive UIs with Jetpack Compose and XML layouts</li>
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Working with Android Jetpack libraries</li>
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> API integration using Retrofit, OkHttp, and Firebase</li>
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Version control with Git and GitHub</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <div class="card skill-card">
+                            <div class="card-header">Python Skills</div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Flask and FastAPI for scalable web applications</li>
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Data processing with Pandas and NumPy</li>
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Web scraping with BeautifulSoup and Selenium</li>
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Machine learning with TensorFlow and scikit-learn</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-4 mb-4">
+                        <div class="card skill-card">
+                            <div class="card-header">Tools & Technologies</div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Android Studio, Kotlin</li>
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Firebase (Firestore, Realtime Database)</li>
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Flask, FastAPI, Pandas, NumPy</li>
+                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Machine Learning (TensorFlow, scikit-learn)</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+
+
 
         <!-- Contact Section -->
         <section id="contact" class="page-section">
