about me (color change)

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </section>
         <!-- About Section-->
-        <section class="page-section bg-primary text-white mb-0" id="about">
+        <section class="page-section bg-teal text-white mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-white">About Me</h2>
@@ -134,52 +134,55 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center">
-                        <p class="lead">Hi, I’m Maks Kaczmarek, an Android developer currently studying Computer Science at Politechnika Łódzka in Łódź. I specialize in Android app development using Kotlin, focusing on building efficient, scalable, and user-friendly applications. My goal is to create seamless mobile solutions that provide smooth and engaging user experiences.</p>
-                        <p class="lead">In addition to Kotlin, I’m experienced in Python, which I use for backend development, scripting, and automation. Whether it's building web scrapers, automating tasks, or working with APIs, I leverage Python’s versatility to create efficient solutions. I am always looking for opportunities to enhance my skills and explore new technologies.</p>
+                    <div class="col-lg-8 mx-auto">
+                        <p class="lead text-center">
+                            Hi, I’m Maks Kaczmarek, an Android developer currently studying Computer Science at Politechnika Łódzka in Łódź. I specialize in Android app development using Kotlin, focusing on building efficient, scalable, and user-friendly applications. My goal is to create seamless mobile solutions that provide smooth and engaging user experiences.
+                        </p>
+                        <p class="lead text-center">
+                            In addition to Kotlin, I’m experienced in Python, which I use for backend development, scripting, and automation. Whether it's building web scrapers, automating tasks, or working with APIs, I leverage Python’s versatility to create efficient solutions. I am always looking for opportunities to enhance my skills and explore new technologies.
+                        </p>
                     </div>
                 </div>
-                <!-- Skill Cards-->
-                <div class="row text-center mt-4">
-                    <div class="col-md-4 mb-4">
-                        <div class="card skill-card">
-                            <div class="card-header">Android Development Skills</div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Advanced Android app development using Kotlin</li>
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Building responsive UIs with Jetpack Compose and XML layouts</li>
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Working with Android Jetpack libraries</li>
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> API integration using Retrofit, OkHttp, and Firebase</li>
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Version control with Git and GitHub</li>
+                <div class="row text-center">
+                    <!-- Android Skills Card -->
+                    <div class="col-md-4">
+                        <div class="card bg-teal-dark text-white">
+                            <h3>Android Development Skills</h3>
+                            <ul>
+                                <li>Advanced Android app development using Kotlin</li>
+                                <li>Building responsive UIs with Jetpack Compose</li>
+                                <li>API integration using Retrofit, OkHttp, and Firebase</li>
+                                <li>Version control with Git and GitHub</li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-4">
-                        <div class="card skill-card">
-                            <div class="card-header">Python Skills</div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Flask and FastAPI for scalable web applications</li>
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Data processing with Pandas and NumPy</li>
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Web scraping with BeautifulSoup and Selenium</li>
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Machine learning with TensorFlow and scikit-learn</li>
+                    <!-- Python Skills Card -->
+                    <div class="col-md-4">
+                        <div class="card bg-teal-dark text-white">
+                            <h3>Python Skills</h3>
+                            <ul>
+                                <li>Flask and FastAPI for scalable web applications</li>
+                                <li>Data processing with Pandas and NumPy</li>
+                                <li>Web scraping with BeautifulSoup and Selenium</li>
+                                <li>Machine learning with TensorFlow</li>
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-4">
-                        <div class="card skill-card">
-                            <div class="card-header">Tools & Technologies</div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Android Studio, Kotlin</li>
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Firebase (Firestore, Realtime Database)</li>
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Flask, FastAPI, Pandas, NumPy</li>
-                                <li class="list-group-item"><i class="fas fa-check-circle"></i> Machine Learning (TensorFlow, scikit-learn)</li>
+                    <!-- Tools Card -->
+                    <div class="col-md-4">
+                        <div class="card bg-teal-dark text-white">
+                            <h3>Tools & Technologies</h3>
+                            <ul>
+                                <li>Android Studio, Kotlin</li>
+                                <li>Firebase (Firestore, Realtime Database)</li>
+                                <li>Flask, FastAPI, Pandas, NumPy</li>
+                                <li>Machine Learning (TensorFlow)</li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
-
 
         <!-- Contact Section -->
         <section id="contact" class="page-section">
